--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,20 +19,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Use Node.js 20
-      uses: actions/setup-node@v3
-      with:
-        node-version: '20'
-
     - uses: actions/checkout@v3
+
     - name: Set up JDK 21
       uses: actions/setup-java@v3
       with:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
+
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B package --file source/Java_Projects/Library_Management_System/pom.xml  # Replace with the correct path to your pom.xml
+
 
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
