--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,7 +29,7 @@ jobs:
         cache: maven
 
     - name: Build with Maven
-      run: mvn -B package --file ./source/Java_Projects/Library_Management_System/pom.xml  # Replace with the correct path to your pom.xml
+      run: mvn -B package --file source/Java_Projects/Library_Management_System/pom.xml
 
 
 
